# mscpp

./: CMakeLists.txt  README.md  shell.nix
.github/workflows/: test.yml
cmake/: mscppConfig.cmake.in
include/mscpp/: InputSet.h  MicroService.h  MicroServiceContainer.h  ServiceFactory.h  StateSet.h  mscpp.h
include/mscpp/internal/: logger.h  utils.h
tests/: MainTest.cpp  ServiceTest.cpp
tests/example-services/: Inputs.cpp  Inputs.h  ServiceA.cpp  ServiceA.h  ServiceB.cpp  ServiceB.h
